[package]
name = "antman"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
global_env = { git = "https://github.com/LKBaka/global_env.git"}
once_cell = "1.21.3"
reqwest = { version = "0.12.23", features = ["stream"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "5.1.1"
toml = "0.9.11"
toml_edit = "0.24.0"

[profile.samply]
inherits = "release"
debug = true
